--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -103,12 +103,11 @@
             and a consuming application should be prepared to recognize either form.
             Because the qualification form is more verbose, the unqualified form should be favored in cases where additional properties are not provided.
             When the qualified form is expressed, including the equivalent unqualified form will facilitate PROV-O consumption.
-
-            <-- To simplify client queries, 
+        </p>
+            <!-- To simplify client queries, 
             any qualified relation SHOULD be accompanied by the equivalent unqualified statement. 
             Unqualified properties SHOULD NOT have the equivalent qualified form
             asserted unless it adds additional information. -->
-        </p>
 
       <p>In addition to the previous two tables, <a href="#qualified-terms-figure">Figure 4</a> 
          illustrates the classes and properties needed to apply the qualification pattern to the thirteen unqualified influence relations. 
