save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -102,7 +102,7 @@
             It is correct and acceptable for an implementer to use either qualified or unqualified forms as they choose (or both), 
             and a consuming application should be prepared to recognize either form.
             Because the qualification form is more verbose, the unqualified form should be favored in cases where additional properties are not provided.
-            When the qualified form is expressed, including the equivalent unqualified form will facilitate PROV-O consumption.
+            When the qualified form is expressed, including the equivalent unqualified form can facilitate PROV-O consumption, and is thus encouraged.
         </p>
             <!-- To simplify client queries, 
             any qualified relation SHOULD be accompanied by the equivalent unqualified statement. 
