--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -97,7 +97,7 @@
          </p>
 
          <p>
-            As can be seen in this example, qualifying an influence relation provides a second form (e.g. <code>:e1Gen</code>) to express an equivalent influence relation 
+            As can be seen in this example, qualifying an influence relation provides a second form (e.g. <code>:e1 prov:qualifiedGeneration :e1Gen</code>) to express an equivalent influence relation 
             (e.g. <code>:e1 prov:wasGeneratedBy :a1</code>).
             It is correct and acceptable for an implementer to use either qualified or unqualified forms as they choose (or both), 
             and a consuming application should be prepared to recognize either form.
