save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -165,7 +165,7 @@
 
 
 
-      <p>The following two examples show the result of applying the Usage and Association patterns to the chart making example from <a href=#description-starting-point-terms>Section 3.1</a>.
+      <p>The following two examples show the result of applying the Usage and Association patterns to the chart-making example from <a href=#description-starting-point-terms>Section 3.1</a>.
       </p>
 
       <div id="narrative-example-qualified-3" about="#narrative-example-qualified-3" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
@@ -193,7 +193,7 @@
       </div>
 
 
-       <p>This section finishes with two more examples of qualification as applied to the chart making example from <a href=#description-starting-point-terms>Section 3.1</a>.
+       <p>This section finishes with two more examples of qualification as applied to the chart-making example from <a href=#description-starting-point-terms>Section 3.1</a>.
        </p>
 
 
