save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -188,7 +188,8 @@
            <div><b>Qualified Association</b></div>
             <p>The <span class="repeated">prov:qualifiedAssociation</span> property parallels the 
             <span class="repeated">prov:wasAssociatedWith</span> property to provide an additional description about the <code>ex:illustrationActivity</code> that Derek influenced. 
-            The instance of <span class="repeated">prov:Association</span> cites the agent (<code>ex:derek</code>) that followed the instructions (<code>ex:tutorial_blog</code>).
+            The instance of <span class="repeated">prov:Association</span> cites the influencing agent (<code>ex:derek</code>) that followed the instructions (<code>ex:tutorial_blog</code>). 
+            Further, Derek served the role of illustrationist during the activity.
             </p>
               <pre class="example">{% include "includes/eg16-journalism-qualified-association.ttl" %}</pre>
         </div>
