save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -5,8 +5,6 @@
          The additional terms are illustrated in the following figure and can be separated into five different categories.</p>
 
       <div id="expanded-terms-figure" style="text-align: center;" class="figure">
-            <!-- When publishing to w3c: replace prov-o-diagrams/ with diagrams/ -->
-            <!--img src="prov-o-diagrams/Starting-points-terms.png"-->
             <img src="http://dvcs.w3.org/hg/prov/raw-file/tip/ontology/diagram-history/2012-05-03/expanded.svg"
                  style="width: 60%; min-width: 25em; max-width: 60em" 
                  alt="PROV-O Starting Point terms"/>
@@ -113,7 +111,20 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
 		   summarizes the changes in a revision of the original post (<code>ex:post9821v2</code>). This revision is also a specialization of the original post, since it is a refined version. 
          Thus, the permalink to the latest version (<code>ex:more-crime-happens-in-cities</code>) remains the same in the new revision, but a different URL is given for its snapshot (<code>ex:postContent1</code>).
 		   </p>		   
-		   
+
+         <div id="expanded-example-illustration-1" style="text-align: center;" class="figure">
+
+               <img src="http://dvcs.w3.org/hg/prov/raw-file/tip/ontology/diagram-history/2012-07-09-david/expanded-terms-example-bundlePost.svg"
+                    style="width: 60%; min-width: 25em; max-width: 60em" 
+                    alt="PROV-O Starting Point terms"/>
+
+               <div class="figcaption"><a href="#expanded-example-illustration-1">Figure 4</a>. 
+                  An illustration of the PROV-O assertions in <a href="#narrative-example-expanded-1">Example 3</a>.
+               </div>
+         </div>
+
+
+ 
 		 <div id="narrative-example-expanded-1-a" about="#narrative-example-expanded-1-a" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
            <p>Shortly after Derek's post publication, Monica adapts the text for a wider audience in a new post (<code>ex:post9822</code>). This version is a specialization of the original post,
 		   and an alternate of the version modified by Derek. Since the provenance produced by the activities of Derek and Monica correspond to different user views, the system
