save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -119,7 +119,7 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
                     alt="PROV-O Starting Point terms"/>
 
                <div class="figcaption"><a href="#expanded-example-illustration-1">Figure 4</a>. 
-                  An illustration of the PROV-O assertions in <a href="#narrative-example-expanded-1">Example 3</a>.
+                  An illustration of the PROV-O assertions in <a href="#narrative-example-expanded-1">Example 3</a>, where Derek publishes a two versions of a blog for the National Newspaper, Inc.
                </div>
          </div>
 
