--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -108,7 +108,8 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
 		   </p>
 		   <p>
 		   However, shortly after having published the post, Derek detects a typo. He does not want to record the activity that led to the new version, so he just creates a new version and 
-		   summarizes the changes in a revision of the original post (<code>ex:post9821v2</code>). This revision is also a specialization of the original post, since it is a refined version. 
+		   summarizes the changes in a revision of the original post (<code>ex:post9821v2</code>). This revision is also an alternate of the original post, 
+         since they are both forms of the long-standing blog.
          Thus, the permalink to the latest version (<code>ex:more-crime-happens-in-cities</code>) remains the same in the new revision, but a different URL is given for its snapshot (<code>ex:postContent1</code>).
 		   </p>		   
 
