save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
@@ -75,7 +75,7 @@
       attributed to him.
       </p>
 
-      <p>Finally, the example states that the agent <code>ex:derek</code> acted on behalf of the organization <code>ex:chartgen</code>.
+      <p>Finally, the example states that the agent <code>ex:derek</code> acted on behalf of the organization <code>ex:national_newspaper_inc</code>.
       </p>   
 
       <div id="narrative-example-simple-1-figure" style="text-align: center;" class="figure">
