--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -101,7 +101,7 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
         </div>
 		   
 		   <p>
-		   Agent <code>ex:derek</code>, acting again on behalf of the <code>ex:chartgenerators</code> organization, 
+		   Agent <code>ex:derek</code>, acting again on behalf of the <code>:national_newspaper_inc</code> organization, 
 		   publishes a post about his recent changes to the aggregated file (<code>ex:aggregatedByRegions</code>) using the tool <code>ex:postEditor</code>. Since he is the one who started and ended the publishing activity (<code>ex:publicationActivity1123</code>), that information
 		   is recorded as well. The post produced by <code>ex:derek</code> (<code>ex:post9821v1</code>) includes a permanent link where the content of the latest version is shown
 		   (<code>ex:more-crime-happens-in-cities</code>) plus a snapshot of the content of the current version (<code>ex:postContent0</code>). Derek also adds additional metadata of the post, like the title.
