--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -125,7 +125,7 @@
       <p>In subfigure <strong>a</strong> the <span class="repeated">prov:qualifiedUsage</span> property parallels the <span class="repeated">prov:used</span> property and references an instance of 
       <span class="repeated">prov:Usage</span>, which in turn provides attributes of the <span class="repeated">prov:used</span> relation between the Activity and Entity. 
       The <span class="repeated">prov:entity</span> property is used to cite the Entity that was used by the Activity. 
-      In this case, the time that the Activity used the Entity is provided using the <a href=#atTime" class="qname">prov:atTime</a> property and a literal 
+      In this case, the time that the Activity used the Entity is provided using the <a href="#atTime" class="qname">prov:atTime</a> property and a literal 
       <span class="repeated">xsd:dateTime</span> value. The <span class="repeated">prov:atTime</span> property can be used to describe any 
       <a href="#InstantaneousEvent" class="qname">prov:InstantaneousEvent</a> (including 
       <a href="#Start" class="qname">prov:Start</a>, 
@@ -157,7 +157,7 @@
             Illustration of the properties and classes to use (<span style="color: blue">in blue</span>)
             to qualify the 
             <a href="#description-starting-point-terms">starting point</a> and 
-            <a href="description-expanded-terms">expanded</a> influence relations (<strong>dotted black</strong>). <br/>
+            <a href="#description-expanded-terms">expanded</a> influence relations (<strong>dotted black</strong>). <br/>
             <a href="#Quotation">Quotation</a>, <a href="#Revision">Revision</a>, and <a href="#Source">Source</a> 
              are omitted because they are special forms of <a href="#Derivation">Derivation</a> and follow the same pattern as subfigure <strong>g</strong>.</div>
        </div>
