--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -102,15 +102,16 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
 		   
 		   <p>
 		   Agent <code>ex:derek</code>, acting again on behalf of the <code>:national_newspaper_inc</code> organization, 
-		   publishes a post about his recent changes to the aggregated file (<code>ex:aggregatedByRegions</code>) using the tool <code>ex:postEditor</code>. Since he is the one who started and ended the publishing activity (<code>ex:publicationActivity1123</code>), that information
-		   is recorded as well. The post produced by <code>ex:derek</code> (<code>ex:post9821v1</code>) includes a permanent link where the content of the latest version is shown
-		   (<code>ex:more-crime-happens-in-cities</code>) plus a snapshot of the content of the current version (<code>ex:postContent0</code>). Derek also adds additional metadata of the post, like the title.
+		   published a post about his recent changes to the aggregated file (<code>ex:aggregatedByRegions</code>) using the tool <code>ex:postEditor</code> (which was included in a user action tracking system compliant to PROV)
+		   . Since he was the one who started and ended the publishing activity (<code>ex:publicationActivity1123</code>), that information
+		   was recorded as well. The post produced by <code>ex:derek</code> (<code>ex:post9821v1</code>) included a permanent link where the content of the latest version is shown
+		   (<code>ex:more-crime-happens-in-cities</code>) plus a snapshot of the content of the current version (<code>ex:postContent0</code>). Derek also added additional metadata of the post, like the title.
 		   </p>
 		   <p>
-		   However, shortly after having published the post, Derek detects a typo. He does not want to record the activity that led to the new version, so he just creates a new version and 
-		   summarizes the changes in a revision of the original post (<code>ex:post9821v2</code>). This revision is also an alternate of the original post, 
-         since they are both forms of the long-standing blog.
-         Thus, the permalink to the latest version (<code>ex:more-crime-happens-in-cities</code>) remains the same in the new revision, but a different URL is given for its snapshot (<code>ex:postContent1</code>).
+		   However, shortly after having published the post, Derek detected a typo. He didn't not want to record the activity that led to the new version, so he just created a new version and 
+		   summarized the changes in a revision of the original post (<code>ex:post9821v2</code>). This revision was also an alternate of the original post, 
+         since they were both forms of the long-standing blog.
+         Thus, the permalink to the latest version (<code>ex:more-crime-happens-in-cities</code>) remained the same in the new revision, but a different URL was given for its snapshot (<code>ex:postContent1</code>).
 		   </p>		   
 
          <div id="expanded-example-illustration-1" style="text-align: center;" class="figure">
@@ -120,16 +121,17 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
                     alt="PROV-O Starting Point terms"/>
 
                <div class="figcaption"><a href="#expanded-example-illustration-1">Figure 4</a>. 
-                  An illustration of the PROV-O assertions in <a href="#narrative-example-expanded-1">Example 3</a>, where Derek publishes a two versions of a blog for the National Newspaper, Inc.
+                  An illustration of the PROV-O assertions in <a href="#narrative-example-expanded-1">Example 3</a>, where Derek published two versions of a blog for the National Newspaper, Inc.
                </div>
          </div>
 
 
  
 		 <div id="narrative-example-expanded-1-a" about="#narrative-example-expanded-1-a" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
-           <p>Shortly after Derek's post publication, Monica adapts the text for a wider audience in a new post (<code>ex:post9822</code>). This version is a specialization of the original post,
-		   and an alternate of the version modified by Derek. Since the provenance produced by the activities of Derek and Monica correspond to different user views, the system
-		   automatically publish it in different <a href="#Bundle" class="qname">prov:Bundle</a>s (<code>ex:bundlePost and ex:bundlePost1</code>).
+           <p>Shortly after Derek's post publication, Monica adapted the text for a wider audience in a new post (<code>ex:post9822</code>). This version was a specialization of the original post,
+		   and an alternate of the version modified by Derek. Since the provenance produced by the activities of Derek and Monica corresponded to different user views, the system
+		   automatically published it in different <a href="#Bundle" class="qname">prov:Bundles</a> (<code>ex:bundlePost and ex:bundlePost1</code>). The system also tagged them as the topic of 
+			the bundle (so as to be able to locate easily their actions) and added additional metadata, such as the date of creation of the bundle or the creator.
             </p> 		   
             <p>   
                <a href="#narrative-example-expanded-1-a"/>Example 3</a>:
@@ -139,7 +141,7 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
         </div>
 		   
          <div id="narrative-example-expanded-2" about="#narrative-example-expanded-2" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
-            <p>Some time passes by, and John writes his own conclusions quoting the previous two posts:
+            <p>After some time, John wrote his own conclusions quoting the previous two posts:
             </p> 
             <p>   
                <a href="#narrative-example-expanded-2"/>Example 4</a>:
@@ -149,11 +151,11 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
          </div>
 		   
 		   <p>
-		   Agent <code>ex:John</code> also names the URI of the original source (<code>ex:aggregatedByRegions</code>). All the provenance statements related to his post
+		   Agent <code>ex:John</code> also named the URI of the original source (<code>ex:aggregatedByRegions</code>). All the provenance statements related to his post
 		   are grouped in a new <span class="repeated">prov:Bundle</span> (<code>ex:bundlePost2</code>).
 		   
-		   Unfortunately, there is a problem in the servers where <code>:post19201</code> is being stored, and all the data related to the post is lost. Thus, the system
-		   invalidates the entity automatically and notifies John about the error.
+		   Unfortunately, there was a problem in the servers where <code>:post19201</code> was being stored, and all the data related to the post was lost permanently. Thus, the system
+		   invalidated the entity automatically and notified John about the error.
 		   </p> 		   
 		   
          <div id="narrative-example-expanded-3" about="#narrative-example-expanded-3" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
