--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -9,7 +9,9 @@
                  style="width: 60%; min-width: 25em; max-width: 60em" 
                  alt="PROV-O Starting Point terms"/>
             <div class="figcaption"><a href="#expanded-terms-figure">Figure 3</a>. The expanded terms build upon those in the Starting Points section. <br/>
-            The domain of <a href="#atLocation">prov:atLocation</a> (<span class="repeated">prov:Activity</span> or <span class="repeated">prov:Entity</span> or <span class="repeated">prov:Agent</span> or <span class="repeated">prov:InstantaneousEvent</span>) is not illustrated.</div>
+            The diagrams in this document depict Entities as yellow ovals, Activities as blue rectangles, and Agents as orange pentagons.
+            The domain of <a href="#atLocation">prov:atLocation</a> (<span class="repeated">prov:Activity</span> or <span class="repeated">prov:Entity</span> or <span class="repeated">prov:Agent</span> or <span class="repeated">prov:InstantaneousEvent</span>) is not illustrated.
+            </div>
       </div>
 
 
@@ -115,6 +117,7 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
 
                <div class="figcaption"><a href="#expanded-example-illustration-1">Figure 4</a>. 
                   An illustration of the PROV-O assertions in <a href="#narrative-example-expanded-1">Example 3</a>, where Derek published two versions of a blog for the National Newspaper, Inc.
+         The diagrams in this document depict Entities as yellow ovals, Activities as blue rectangles, and Agents as orange pentagons.
                </div>
          </div>
 
