--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -158,6 +158,7 @@
             to qualify the 
             <a href="#description-starting-point-terms">starting point</a> and 
             <a href="#description-expanded-terms">expanded</a> influence relations (<strong>dotted black</strong>). <br/>
+            The diagrams in this document depict Entities as ovals, Activities as rectangles, and Agents as pentagons.
             <a href="#Quotation">Quotation</a>, <a href="#Revision">Revision</a>, and <a href="#Source">Source</a> 
              are omitted because they are special forms of <a href="#Derivation">Derivation</a> and follow the same pattern as subfigure <strong>g</strong>.</div>
        </div>
