--- a/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
@@ -43,7 +43,10 @@
             <img src="http://dvcs.w3.org/hg/prov/raw-file/tip/ontology/diagram-history/2012-05-03/starting-points.svg"
                  style="width: 60%; min-width: 25em; max-width: 60em" 
                  alt="PROV-O Starting Point terms"/>
-            <div class="figcaption"><a href="#starting-points-figure">Figure 1</a>. The three Starting Point classes and the properties that relate them.</div>
+            <div class="figcaption"><a href="#starting-points-figure">Figure 1</a>. 
+            The three Starting Point classes and the properties that relate them.
+            The diagrams in this document depict Entities as yellow ovals, Activities as blue rectangles, and Agents as orange pentagons.
+            </div>
       </div>
 
         <div id="narrative-example-simple-1" about="#narrative-example-simple-1" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
@@ -82,7 +85,10 @@
             <img src="http://dvcs.w3.org/hg/prov/raw-file/tip/ontology/diagram-history/2012-07-09-david/starting-points-example.svg"
                  style="width: 90%; min-width: 25em; max-width: 60em" 
                  alt="Illustration of Derek making a bar chart from some aggregated government data."/>
-            <div class="figcaption"><a href="#narrative-example-simple-1-figure">Figure 2</a>. The three Starting Point classes and the properties that relate them.</div>
+            <div class="figcaption"><a href="#narrative-example-simple-1-figure">Figure 2</a>. 
+            The three Starting Point classes and the properties that relate them.
+            The diagrams in this document depict Entities as yellow ovals, Activities as blue rectangles, and Agents as orange pentagons.
+            </div>
       </div>
 
 	  </section> <!-- Starting Points  in PROV-O -->
