--- a/components/services/prov-o/includes/at-a-glance-expanded.html
+++ b/components/services/prov-o/includes/at-a-glance-expanded.html
@@ -6,6 +6,12 @@
       <a href="#Bundle">prov:Bundle</a>
     </li>
     <li>
+      <a href="#Collection">prov:Collection</a>
+    </li>
+    <li>
+      <a href="#EmptyCollection">prov:EmptyCollection</a>
+    </li>
+    <li>
       <a href="#Location">prov:Location</a>
     </li>
     <li>
@@ -30,28 +36,28 @@
       <a href="#atLocation">prov:atLocation</a>
     </li>
     <li class="object-property">
-      <a href="#contextualized">prov:contextualized</a>
-    </li>
-    <li class="object-property">
       <a href="#generated">prov:generated</a>
     </li>
     <li class="datatype-property">
       <a href="#generatedAtTime">prov:generatedAtTime</a>
     </li>
     <li class="object-property">
+      <a href="#hadMember">prov:hadMember</a>
+    </li>
+    <li class="object-property">
       <a href="#hadPrimarySource">prov:hadPrimarySource</a>
     </li>
     <li class="object-property">
-      <a href="#inContext">prov:inContext</a>
+      <a href="#influenced">prov:influenced</a>
+    </li>
+    <li class="object-property">
+      <a href="#invalidated">prov:invalidated</a>
     </li>
     <li class="datatype-property">
       <a href="#invalidatedAtTime">prov:invalidatedAtTime</a>
     </li>
     <li class="object-property">
       <a href="#specializationOf">prov:specializationOf</a>
-    </li>
-    <li class="object-property">
-      <a href="#tracedTo">prov:tracedTo</a>
     </li>
     <li class="datatype-property">
       <a href="#value">prov:value</a>
