--- a/components/services/prov-o/includes/at-a-glance-qualified.html
+++ b/components/services/prov-o/includes/at-a-glance-qualified.html
@@ -3,10 +3,10 @@
      class="prov-qualified owl-classes at-a-glance">
   <ul class="hlist">
     <li>
-      <a href="#ActivityInvolvement">prov:ActivityInvolvement</a>
+      <a href="#ActivityInfluence">prov:ActivityInfluence</a>
     </li>
     <li>
-      <a href="#AgentInvolvement">prov:AgentInvolvement</a>
+      <a href="#AgentInfluence">prov:AgentInfluence</a>
     </li>
     <li>
       <a href="#Association">prov:Association</a>
@@ -27,10 +27,13 @@
       <a href="#End">prov:End</a>
     </li>
     <li>
-      <a href="#EntityInvolvement">prov:EntityInvolvement</a>
+      <a href="#EntityInfluence">prov:EntityInfluence</a>
     </li>
     <li>
       <a href="#Generation">prov:Generation</a>
+    </li>
+    <li>
+      <a href="#Influence">prov:Influence</a>
     </li>
     <li>
       <a href="#InstantaneousEvent">prov:InstantaneousEvent</a>
@@ -39,10 +42,10 @@
       <a href="#Invalidation">prov:Invalidation</a>
     </li>
     <li>
-      <a href="#Involvement">prov:Involvement</a>
+      <a href="#Plan">prov:Plan</a>
     </li>
     <li>
-      <a href="#Plan">prov:Plan</a>
+      <a href="#PrimarySource">prov:PrimarySource</a>
     </li>
     <li>
       <a href="#Quotation">prov:Quotation</a>
@@ -54,13 +57,7 @@
       <a href="#Role">prov:Role</a>
     </li>
     <li>
-      <a href="#Source">prov:Source</a>
-    </li>
-    <li>
       <a href="#Start">prov:Start</a>
-    </li>
-    <li>
-      <a href="#Trace">prov:Trace</a>
     </li>
     <li>
       <a href="#Usage">prov:Usage</a>
@@ -99,10 +96,7 @@
       <a href="#hadUsage">prov:hadUsage</a>
     </li>
     <li class="object-property">
-      <a href="#involved">prov:involved</a>
-    </li>
-    <li class="object-property">
-      <a href="#involvee">prov:involvee</a>
+      <a href="#influencer">prov:influencer</a>
     </li>
     <li class="object-property">
       <a href="#qualifiedAssociation">prov:qualifiedAssociation</a>
@@ -126,7 +120,13 @@
       <a href="#qualifiedGeneration">prov:qualifiedGeneration</a>
     </li>
     <li class="object-property">
+      <a href="#qualifiedInfluence">prov:qualifiedInfluence</a>
+    </li>
+    <li class="object-property">
       <a href="#qualifiedInvalidation">prov:qualifiedInvalidation</a>
+    </li>
+    <li class="object-property">
+      <a href="#qualifiedPrimarySource">prov:qualifiedPrimarySource</a>
     </li>
     <li class="object-property">
       <a href="#qualifiedQuotation">prov:qualifiedQuotation</a>
@@ -135,16 +135,13 @@
       <a href="#qualifiedRevision">prov:qualifiedRevision</a>
     </li>
     <li class="object-property">
-      <a href="#qualifiedSource">prov:qualifiedSource</a>
-    </li>
-    <li class="object-property">
       <a href="#qualifiedStart">prov:qualifiedStart</a>
     </li>
     <li class="object-property">
-      <a href="#qualifiedTrace">prov:qualifiedTrace</a>
+      <a href="#qualifiedUsage">prov:qualifiedUsage</a>
     </li>
     <li class="object-property">
-      <a href="#qualifiedUsage">prov:qualifiedUsage</a>
+      <a href="#wasInfluencedBy">prov:wasInfluencedBy</a>
     </li>
   </ul>
 </div>
