--- a/components/services/prov-o/includes/qualifed-forms-qualified.html
+++ b/components/services/prov-o/includes/qualifed-forms-qualified.html
@@ -1,9 +1,11 @@
 <table class="qualified-forms">
-  <caption>Qualification Property and Involvement Class used to qualify a Qualified Property.</caption>
+  <caption><a href="#qualified-forms-qualified">Table 4</a>: Qualification Property and Influence Class used to qualify a Qualified Property.</caption>
   <tr>
-    <th>Qualified Property</th>
-    <th>Qualification Property</th>
-    <th>Involvement Class</th>
-    <th>Object Property</th>
+    <th><span title="Influenced Class">Influenced Class</span></th>
+    <th><span title="Unqualified Influence">Unqualified Influence</span></th>
+    <th><span title="Qualification Property">Qualification Property</span></th>
+    <th><span title="Qualified Influence">Qualified Influence</span></th>
+    <th><span title="Influencer Property">Influencer Property</span></th>
+    <th><span title="Influencing Class">Influencing Class</span></th>
   </tr>
 </table>
