save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
@@ -40,8 +40,8 @@
          Activities and Entities, Agents may be ascribed responibility for any Activity or an Entity within a provenance chain. 
          An Agent's responsibility for an Activity or Entity is described using the properties <a href='#wasAssociatedWith' class="qname">prov:wasAssociatedWith</a> and 
          <a href='#wasAttributedTo' class="qname">prov:wasAttributedTo</a>, respectively. 
-         Agents can also be responsible for other Agents' actions. In this case, the Agent that influenced an Activity or Entity <a href='#actedOnBehalfOf' class="qname">prov:actedOnBehalfOf</a> 
-         another Agent that also bears some responsibility for the resulting Activity or Entity.
+         Agents can also be responsible for other Agents' actions. In this case of delegation, the influencing Agent <a href='#actedOnBehalfOf' class="qname">prov:actedOnBehalfOf</a> 
+         another Agent that also bears responsibility for the Activity or Entity.
 
       <div id="starting-points-figure" style="text-align: center;" class="figure">
             <!-- When publishing to w3c: replace prov-o-diagrams/ with diagrams/ -->
