--- a/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
@@ -37,7 +37,7 @@
 
       <p>While the properties <span class="repeated">prov:used</span>, <span class="repeated">prov:wasGeneratedBy</span>, 
          <span class="repeated">prov:wasInformedBy</span>, and <span class="repeated">prov:wasDerivedFrom</span> can be used to construct provenance chains among 
-         Activities and Entities, Agents may be ascribed responibility for any Activity or an Entity within a provenance chain. 
+         Activities and Entities, Agents may also be ascribed responibility for any Activity or an Entity within a provenance chain. 
          An Agent's responsibility for an Activity or Entity is described using the properties <a href='#wasAssociatedWith' class="qname">prov:wasAssociatedWith</a> and 
          <a href='#wasAttributedTo' class="qname">prov:wasAttributedTo</a>, respectively. 
          Agents can also be responsible for other Agents' actions. In this case of delegation, the influencing Agent <a href='#actedOnBehalfOf' class="qname">prov:actedOnBehalfOf</a> 
