save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
@@ -37,11 +37,11 @@
 
       <p>While the properties <span class="repeated">prov:used</span>, <span class="repeated">prov:wasGeneratedBy</span>, 
          <span class="repeated">prov:wasInformedBy</span>, and <span class="repeated">prov:wasDerivedFrom</span> can be used to construct provenance chains among 
-         Activities and Entities, Agents may also be ascribed responibility for any Activity or an Entity within a provenance chain. 
+         Activities and Entities, Agents may also be ascribed responsibility for any Activity or an Entity within a provenance chain. 
          An Agent's responsibility for an Activity or Entity is described using the properties <a href='#wasAssociatedWith' class="qname">prov:wasAssociatedWith</a> and 
          <a href='#wasAttributedTo' class="qname">prov:wasAttributedTo</a>, respectively. 
          Agents can also be responsible for other Agents' actions. In this case of delegation, the influencing Agent <a href='#actedOnBehalfOf' class="qname">prov:actedOnBehalfOf</a> 
-         another Agent that also bears responsibility for the Activity or Entity.
+         another Agent that also bears responsibility for the influenced Activity or Entity.
 
       <div id="starting-points-figure" style="text-align: center;" class="figure">
             <!-- When publishing to w3c: replace prov-o-diagrams/ with diagrams/ -->
@@ -50,7 +50,7 @@
                  style="width: 60%; min-width: 25em; max-width: 60em" 
                  alt="PROV-O Starting Point terms"/>
             <div class="figcaption"><a href="#starting-points-figure">Figure 1</a>. 
-            The three Starting Point classes and the properties that relate them.
+            The three Starting Point classes and the properties that relate them.<br/>
             The diagrams in this document depict Entities as yellow ovals, Activities as blue rectangles, and Agents as orange pentagons.
             </div>
       </div>
