save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
@@ -68,7 +68,7 @@
       activities: <code>:aggregationActivity</code> and <code>:illustrationActivity</code>. The 
       activity <code>:aggregationActivity</code> used 
       the entities <code>:crimeData</code> (a crime statistics dataset) and <code>:nationalRegionsList</code> (a list of national regions), and 
-      generated a new entity, <code>:aggregatedByRegions</code>, that aggregates the statistics in
+      generated a new entity, <code>:aggregatedByRegions</code> that aggregates the statistics in
        <code>:crimeData</code> according to the regions in <code>:nationalRegionsList</code>. 
       The <code>:aggregatedByRegions</code> entity was then used by the <code>:illustrationActivity</code> activity, 
       to generate a new entity <code>:chart1</code> that depicts the aggregated statistics.
