--- a/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
@@ -51,8 +51,9 @@
                  alt="PROV-O Starting Point terms"/>
             <div class="figcaption"><a href="#starting-points-figure">Figure 1</a>. 
             The three Starting Point classes and the properties that relate them.<br/>
-            The diagrams in this document depict Entities as yellow ovals, 
-            Activities as blue rectangles, and Agents as orange pentagons. The responsibility properties are shown in pink.
+            The diagrams in this document depict Entities as yellow ovals,<br/>
+            Activities as blue rectangles, and Agents as orange pentagons.<br/>
+            The responsibility properties are shown in pink.
             </div>
       </div>
 
