--- a/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
@@ -94,7 +94,8 @@
                  style="width: 90%; min-width: 25em; max-width: 60em" 
                  alt="Illustration of Derek making a bar chart from some aggregated government data."/>
             <div class="figcaption"><a href="#narrative-example-simple-1-figure">Figure 2</a>. 
-            The three Starting Point classes and the properties that relate them.<br/>
+            A graphical illustration of the PROV-O in <a href="#narrative-example-simple-1">Example 1</a>, 
+            showing how the three Starting Point classes and the properties that relate them.<br/>
             The diagrams in this document depict Entities as yellow ovals,<br/>
             Activities as blue rectangles, and Agents as orange pentagons.<br/>
             The responsibility properties are shown in pink.
