--- a/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
@@ -96,9 +96,8 @@
             <div class="figcaption"><a href="#narrative-example-simple-1-figure">Figure 2</a>. 
             A graphical illustration of the PROV-O in <a href="#narrative-example-simple-1">Example 1</a>, 
             showing how the three Starting Point classes and the properties that relate them.<br/>
-            The diagrams in this document depict Entities as yellow ovals,<br/>
-            Activities as blue rectangles, and Agents as orange pentagons.<br/>
-            The responsibility properties are shown in pink.
+            The diagrams in this document depict Entities as yellow ovals, Activities as blue rectangles,<br/>
+            and Agents as orange pentagons. The responsibility properties are shown in pink.
             </div>
       </div>
 
