--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -8,7 +8,8 @@
             <img src="http://dvcs.w3.org/hg/prov/raw-file/tip/ontology/diagram-history/2012-05-03/expanded.svg"
                  style="width: 60%; min-width: 25em; max-width: 60em" 
                  alt="PROV-O Starting Point terms"/>
-            <div class="figcaption"><a href="#expanded-terms-figure">Figure 3</a>. The expanded terms build upon those in the Starting Points section. <br/>
+            <div class="figcaption"><a href="#expanded-terms-figure">Figure 3</a>.
+            The expanded terms build upon those in the <a href="#description-starting-point-terms">Starting Points section</a>.<br/>
             The diagrams in this document depict Entities as yellow ovals, Activities as blue rectangles, and Agents as orange pentagons.
             The domain of <a href="#atLocation">prov:atLocation</a> (<span class="repeated">prov:Activity</span> or <span class="repeated">prov:Entity</span> or <span class="repeated">prov:Agent</span> or <span class="repeated">prov:InstantaneousEvent</span>) is not illustrated.
             </div>
