save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -16,7 +16,7 @@
       </div>
 
 
-	  <p>The <strong>first</strong> category extends the <a href="#description-starting-point-terms">Starting Point terms</a> with subclasses, subproperties, and one superproperty.</p>
+	  <p>The <strong>first</strong> category extends the <a href="#description-starting-point-terms">Starting Point terms</a> with subclasses, subproperties, and a superproperty.</p>
 
      <p>Three subclasses of Agent (<a href="#Person" class="qname">prov:Person</a>, <a href="#Organization" class="qname">prov:Organization</a>, and 
       <a href="#SoftwareAgent" class="qname">prov:SoftwareAgent</a>) and
