--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -27,14 +27,14 @@
       <p>
       A <span class="repeated">prov:Collection</span> is an Entity that provides a structure (e.g. set, list, etc.) to some constituents (which are themselves Entities). 
       The <span class="repeated">prov:Collection</span> class can be used to express the provenance of the collection itself: 
-      e.g. who maintains the collection (attribution), which members it contains as it evolves, and how it was assembled. 
+      e.g. who maintained the collection, which members it contained as it evolved, and how it was assembled. 
       The <a href="#hadMember" class="qname">prov:hadMember</a> property is used to assert membership in a collection.
       </p>
 
       <div id="description-bundle">
          <p>
          A <span class="repeated">prov:Bundle</span> is a named set of provenance descriptions, which may itself have provenance. 
-         The named provenance descriptions may be expressed as PROV-O or in some other form.
+         The named set of provenance descriptions may be expressed as PROV-O or in some other form.
          The subclass of Bundle that contains PROV-O assertions is not provided by PROV-O, since it is more appropriate to do so using other recommendations, 
          standards, or technologies. In any case, a Bundle of PROV-O assertions is an abstract set of RDF triples, and adding or removing a triple creates a distinct 
          Bundle of PROV-O assertions.
