save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -34,7 +34,7 @@
       <div id="description-bundle">
          <p>
          A <span class="repeated">prov:Bundle</span> is a named set of provenance descriptions, which may itself have provenance. 
-         The named set of provenance descriptions may be expressed as PROV-O or in any other form.
+         The named set of provenance descriptions may be expressed as PROV-O or any other form.
          The subclass of Bundle that names a set of PROV-O assertions is not provided by PROV-O, since it is more appropriate to do so using other recommendations, 
          standards, or technologies. In any case, a Bundle of PROV-O assertions is an abstract set of RDF triples, and adding or removing a triple creates a distinct 
          Bundle of PROV-O assertions.
@@ -50,7 +50,7 @@
       <a href="#wasInfluencedBy" class="qname">prov:wasInfluencedBy</a> is a superproperty that relates any influenced Entity, Activity, or Agent to any other 
       influencing Entity, Activity, or Agent that had an effect on its characteristics. 
 
-      More specifically, three subproperties of <span class="repeated">prov:wasDerivedFrom</span> are provided for certain kinds of derivation among Entities: 
+      Three subproperties of <span class="repeated">prov:wasDerivedFrom</span> are also provided for certain kinds of derivation among Entities: 
       <a href="#wasQuotedFrom" class="qname">prov:wasQuotedFrom</a> cites a potentially larger Entity (such as a book, blog, or image) from which a new Entity was created
       by repeating some or all of the original, 
       <a href="#wasRevisionOf" class="qname">prov:wasRevisionOf</a> indicates that the derived Entity contains substantial content from the original Entity 
