save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -55,7 +55,7 @@
       by repeating some or all of the original, 
       <a href="#wasRevisionOf" class="qname">prov:wasRevisionOf</a> indicates that the derived Entity contains substantial content from the original Entity 
       (e.g., two editions of a book), and 
-      <a href="#hadPrimarySource" class="qname">prov:hadPrimarySource</a> cites an older Entity produced by some agent with direct experience and 
+      <a href="#hadPrimarySource" class="qname">prov:hadPrimarySource</a> cites an preceding Entity produced by some agent with direct experience and 
       knowledge about the topic (such as a reading from a sensor, or a journal written during an historical event). 
       </p>
 	  
